--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@types/node": "18.11.11",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "axios": "^1.2.1",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
+    "firebase": "^9.15.0",
     "next": "13.0.6",
     "next-redux-wrapper": "^8.0.0",
     "react": "18.2.0",
