--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "firebase": "^9.15.0",
+    "lodash": "^4.17.21",
     "next": "13.0.6",
     "next-redux-wrapper": "^8.0.0",
     "react": "18.2.0",
